# CIPPOTTO

./: CMakeLists.txt  DebugConsoleManager.cpp  DebugConsoleManager.h  DebugSDL.cpp  DebugSDL.h  Platform.cpp  Platform.h  PlatformConsole.cpp  PlatformConsole.h  PlatformSDL.cpp  PlatformSDL.h  README.md  chip8.cpp  chip8.h  main.cpp
